--- a/data-catalog-api/server/src/main/resources/application.properties
+++ b/data-catalog-api/server/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.username=postgres
 spring.datasource.password=example
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+identity.server.hostname=
+identity.server.port=
+identity.server.clientId=
+identity.server.clientSec=
