--- a/replica-catalog-api/client/pom.xml
+++ b/replica-catalog-api/client/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
