--- a/replica-catalog-api/server/pom.xml
+++ b/replica-catalog-api/server/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>dozer</artifactId>
             <version>${dozer.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
