--- a/data-catalog-api/server/src/main/resources/application.properties
+++ b/data-catalog-api/server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.using-basic-sql-scripts
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+sharing.manager.bean=simpleSharingManager
+# sharing.manager.bean=custosSharingManager
