--- a/data-catalog-api/server/src/main/resources/application.properties
+++ b/data-catalog-api/server/src/main/resources/application.properties
@@ -4,15 +4,20 @@ spring.datasource.password=example
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-identity.server.hostname=
-identity.server.port=
-identity.server.clientId=
-identity.server.clientSec=
-
 # Run schema.sql after schema creation performed by Hibernate
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.using-basic-sql-scripts
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-sharing.manager.bean=simpleSharingManager
-# sharing.manager.bean=custosSharingManager
+# Sharing configuration
+
+## Simple Sharing
+sharing.manager.class.name=org.apache.airavata.datacatalog.api.sharing.SimpleSharingManagerImpl
+
+## Custos Sharing
+# sharing.manager.class.name=org.apache.airavata.datacatalog.api.sharing.SharingManagerImpl
+
+# identity.server.hostname=
+# identity.server.port=0
+# identity.server.clientId=
+# identity.server.clientSec=
