Make usePlainText a property

--- a/data-catalog-api/server/service/src/main/resources/application.properties
+++ b/data-catalog-api/server/service/src/main/resources/application.properties
@@ -17,7 +17,8 @@ sharing.manager.class.name=org.apache.airavata.datacatalog.api.sharing.SimpleSha
 ## Custos Sharing
 # sharing.manager.class.name=org.apache.airavata.datacatalog.api.sharing.SharingManagerImpl
 
-# identity.server.hostname=
-# identity.server.port=0
+# identity.server.hostname=localhost
+# identity.server.port=7000
 # identity.server.clientId=
 # identity.server.clientSec=
+# identity.server.usePlainText=true
