--- a/data-catalog-api/server/custos-sharing/pom.xml
+++ b/data-catalog-api/server/custos-sharing/pom.xml
@@ -38,13 +38,14 @@
             <exclusions>
                 <exclusion>
                     <groupId>io.grpc</groupId>
-                    <artifactId>grpc-netty</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>io.grpc</groupId>
                     <artifactId>grpc-core</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-core</artifactId>
+            <version>${grpc.version}</version>
         </dependency>
     </dependencies>
 
