--- a/data-catalog-api/server/service/pom.xml
+++ b/data-catalog-api/server/service/pom.xml
@@ -42,11 +42,11 @@
             <artifactId>data-catalog-api-server-simple-sharing</artifactId>
             <version>0.1-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.apache.airavata</groupId>
             <artifactId>data-catalog-api-server-custos-sharing</artifactId>
             <version>0.1-SNAPSHOT</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-core</artifactId>
