Integrate liquibase for creating the initial db schema #8

--- a/data-catalog-api/server/service/src/main/resources/application.properties
+++ b/data-catalog-api/server/service/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/data_catalog
 spring.datasource.username=postgres
 spring.datasource.password=example
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 # Run schema.sql after schema creation performed by Hibernate
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.data-initialization.using-basic-sql-scripts
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+# spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
 
 # Sharing configuration
 
