--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       POSTGRES_DB: data_catalog
     ports:
       - 5432:5432
+  # To connect to the postgres database from the command line client, use:
+  #   docker run -it --rm --network data-catalog_default postgres psql -h db -U postgres data_catalog
 
   adminer:
     image: adminer
