Change a couple columns to be not-nullable #8

--- a/data-catalog-api/server/service/liquibase.properties
+++ b/data-catalog-api/server/service/liquibase.properties
@@ -1,8 +1,13 @@
-# url:  jdbc:postgresql://localhost:5432/data_catalog
-url: offline:postgresql?snapshot=snapshot.json
+# Run the following to create a snapshot file
+#   liquibase snapshot --output-file=snapshot.json
+# Then update the local database and run the following to create a diff with the snapshot
+#   liquibase diffChangeLog "--url=offline:postgresql?snapshot=snapshot.json" --changelog-file=mydiff.xml
+url:  jdbc:postgresql://localhost:5432/data_catalog
+# url: offline:postgresql?snapshot=snapshot.json
 username: postgres
 password: example
-# classpath:  mysql-connector-java-8.0.27.jar
 referenceUrl:  jdbc:postgresql://localhost:5432/data_catalog
 referenceUsername: postgres
 referencePassword: example
+snapshotFormat: json
+# outputFile=snapshot.json
